JDK 17 support #71